modification générales, ajout ombrages, ajouter un pack

--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -20,6 +20,10 @@
 .arrow-caroussel-nav {
 	position: absolute;
 	z-index: 5;
+	background: none;
+	border: none;
+}
+.arrow-caroussel-nav img {
 	height: 4vmax;
 }
 .arrow-caroussel-nav:hover {
