--- a/src/components/searchBar/index.css
+++ b/src/components/searchBar/index.css
@@ -8,8 +8,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: 1px solid #efefef;
-	background: #94854e;
+	background: linear-gradient(180deg, #94854e 30%, #c5bca0 100%);
 }
 .logo-container,
 .profile-cart-input-container {
@@ -37,6 +36,9 @@
 	border-radius: 20px;
 	padding: 5px;
 	border: none;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+		rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+		rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .img-link {
 	width: auto;
@@ -49,8 +51,9 @@
 .total-cart {
 	position: absolute;
 	top: 20%;
-	left: 80%;
+	left: 70%;
 	z-index: 2;
 	font-weight: 900;
 	color: #efefef;
+	font-size: clamp(1rem, 2vw, 1.4rem);
 }
