--- a/src/components/searchBar/index.css
+++ b/src/components/searchBar/index.css
@@ -24,7 +24,7 @@
 }
 .logo-image {
 	width: auto;
-	height: 100%;
+	height: 80%;
 }
 
 .profile-logo,
@@ -35,7 +35,8 @@
 }
 .search-input {
 	width: 50vw;
-	height: 4vmax;
+	height: 2.5vmax;
+	min-height: 30px;
 	border-radius: 3vmax;
 	padding: 0 2vmin;
 	border: none;
