--- a/src/components/searchBar/index.css
+++ b/src/components/searchBar/index.css
@@ -40,9 +40,8 @@
 	border-radius: 3vmax;
 	padding: 0 2vmin;
 	border: none;
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-		rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-		rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .total-cart {
 	position: absolute;
@@ -50,6 +49,6 @@
 	left: 70%;
 	z-index: 2;
 	font-weight: 900;
-	color: #efefef;
+	color: #50432a;
 	font-size: clamp(1rem, 2vw, 1.4rem);
 }
