ajout formulaire de suppression d'une référence, correction suppressiond d'une déclinaison, et correction de quelque style

--- a/src/components/admin/gestion/index.css
+++ b/src/components/admin/gestion/index.css
@@ -57,3 +57,12 @@ form button:active {
 		rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
 		rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+form > ul {
+	font-size: clamp(0.8rem, 2vw, 1rem);
+}
+.delete-form {
+	width: 30vw;
+	height: 20vw;
+
+	margin: auto;
+}
